update footer links

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
   <div class="row">
     <div id="bottom" class="large-12 columns">
       <ul class="inline-list">
-        <li><a href="#">about</a></li>
-        <li><a href="#">feedback</a></li>
+        <li><a href="https://github.com/libcantonese/webime">about</a></li>
+        <li><a href="https://github.com/libcantonese/webime/issues">feedback</a></li>
       </ul>
     </div>
   </div>
