flip gwong/en display

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div>
         <ul id="buttons" class="button-group even-3">
           <li><a id="selectall" href="#" class="small button">Select All</a></li>
-          <li><a id="ecswitch" href="#" class="small button">En</a></li>
+          <li><a id="ecswitch" href="#" class="small button">廣</a></li>
           <li><a id="config" href="#" class="small button">Config</a></li>
         </ul>
       </div>
